--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ itertools = "0.11.0"
 libloading = "0.8.0"
 ndarray = "0.15.6"
 num-traits = "0.2.16"
+serde = { version = "1.0.183", features = ["derive"] }
+serde_derive = "1.0.183"
+serde_json = "1.0.105"
 sundials-sys = "0.2.5"
 
 [dev-dependencies]
