--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,13 @@ edition = "2021"
 [dependencies]
 cvode-wrap = "0.1.3"
 diffeq = "0.1.0"
+fixedbitset = { version = "0.4.2", features = ["serde"] }
 itertools = "0.11.0"
 libloading = "0.8.0"
 ndarray = "0.15.6"
 num-traits = "0.2.16"
-petgraph = "0.6.3"
+petgraph = { version = "0.6.3", features = ["all", "serde"] }
+rand = "0.8.5"
 serde = { version = "1.0.183", features = ["derive"] }
 serde_derive = "1.0.183"
 serde_json = "1.0.105"
