--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+colored = "2.0.4"
 cvode-wrap = "0.1.3"
 diffeq = "0.1.0"
 fixedbitset = { version = "0.4.2", features = ["serde"] }
@@ -13,6 +14,7 @@ itertools = "0.11.0"
 libloading = "0.8.0"
 ndarray = "0.15.6"
 num-traits = "0.2.16"
+ordered-float = { version = "3.9.0", features = ["serde"] }
 petgraph = { version = "0.6.3", features = ["all", "serde"] }
 rand = "0.8.5"
 serde = { version = "1.0.183", features = ["derive"] }
